fix(font): add font awesome font and align correctly for prompt alerts

--- a/_sass/abstracts/_mixins.scss
+++ b/_sass/abstracts/_mixins.scss
@@ -49,7 +49,7 @@ blockquote {
       width: 1.5rem;
       position: absolute;
       left: 0.5rem;
-      top: 0.5rem;
+      top: 0.8rem;
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
     }
